# SimpleRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TextRendering.sln  premake5.lua
SimpleRenderer/include/: Application.h  CharTexture.h  FileLoader.h  Mesh.h  Physics.h  Tri.h  Util.h  Vertex.h
SimpleRenderer/include/Components/: Component.h  MeshComponent.h  MeshRendererComponent.h  TransformComponent.h
SimpleRenderer/include/Debug/: Timer.h
SimpleRenderer/include/Factories/: FactoryBase.h  ObjectFactory.h
SimpleRenderer/include/Objects/: Camera.h  Object.h  RotatingModel.h
SimpleRenderer/include/Renderer/: ConsoleRenderer.h  Renderer.h  RendererBase.h  SDLRenderer.h
SimpleRenderer/include/Threading/: ThreadPool.h
SimpleRenderer/src/: Application.cpp  CMakeLists.txt  CharTexture.cpp  FileLoader.cpp  Mesh.cpp  Physics.cpp  Tri.cpp  Util.cpp  main.cpp
SimpleRenderer/src/Components/: Component.cpp  MeshComponent.cpp  MeshRendererComponent.cpp  TransformComponent.cpp
SimpleRenderer/src/Debug/: Timer.cpp
SimpleRenderer/src/Factories/: FactoryBase.cpp  ObjectFactory.cpp
SimpleRenderer/src/Objects/: Camera.cpp  Object.cpp  RotatingModel.cpp
SimpleRenderer/src/Renderer/: ConsoleRenderer.cpp  SDLRenderer.cpp
SimpleRenderer/src/Threading/: ThreadPool.cpp
Tests/: CMakeLists.txt  pch.h  test.cpp
Tests/ComponentTests/: TransformComponentTests.h
TextRendering/: Application.cpp  Application.h  CharTexture.cpp  CharTexture.h  Component.cpp  Component.h  CubeRendererComponent.cpp  CubeRendererComponent.h  Mat3.cpp  Mat3.h  Mesh.cpp  Mesh.h  MeshComponent.cpp  MeshComponent.h  MeshRendererComponent.cpp  MeshRendererComponent.h  Object.cpp  Object.h  Physics.cpp  Physics.h  RotatingCube.cpp  RotatingCube.h  RotatingModel.cpp  RotatingModel.h  TextRendering.vcxproj  TextRendering.vcxproj.filters  TransformComponent.cpp  TransformComponent.h  Tri.cpp  Tri.h  Vec3.cpp  Vec3.h  main.cpp
TextRendering/include/: Application.h  CharTexture.h  Vertex.h
TextRendering/include/Components/: Component.h  MeshRendererComponent.h  TransformComponent.h
TextRendering/src/: Application.cpp  Tri.cpp
TextRendering/src/Components/: Component.cpp  MeshComponent.cpp
TextRendering/src/Objects/: Object.cpp  RotatingModel.cpp
bin-intermediate/Release/x64/: TextRendering.exe.recipe  TextRendering.iobj  TextRendering.ipdb
bin-intermediate/Release/x64/TextRendering.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TextRendering.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
models/: OBJ File Format Specs.url  _INFO.txt
